Fixed weird issue  + fixed size
Apply zoom,
Drag item to the left,
item goes below invisible border inside the svg

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -11,8 +11,7 @@ body {
   font: 10px sans-serif;
   shape-rendering: crispEdges;
   border: solid black 1px;
-  background-color: blue;
-  height: 100%;
+  height: 80%;
   width: 100%;
 }
 
